name:                tcpproxy
version:             1.0.0
synopsis:            Proxy for TCP
description:         Proxy for TCP 
license:             BSD3
author:              Adrian Moser
build-type:          Simple
cabal-version:       >= 1.10

executable tcpproxy
   main-is:           Main.hs
   hs-source-dirs:    src
   ghc-options:       -static -optl-pthread 
   -- -optl-static
   build-depends:     base,
                      mtl >= 2.0.1.0, 
                      hslogger >= 1.1.5,
                      bytestring >= 0.9.1.10,
                      network >= 2.3.0.13,
                      happstack-server >= 7.0.1,
                      HStringTemplate >= 0.6.8,
                      blaze-html >= 0.4.3.4,
                      blaze-markup >= 0.8.2.8,
                      stm >= 2.3,
                      text >= 0.11.2.0,
                      containers >= 0.4.0.0,
                      MissingH >= 1.1.1.0,
                      HDBC-sqlite3 >= 2.3.3.1,
                      HDBC >= 2.4.0.4,
                      directory >= 1.1.0.0
   default-language:  Haskell2010
   other-modules:    DB Home Log TCPProxy Templates Types AddConnection Connections

